# rust-mdbook

./: 404.html  CLAUDE.md  README.md  basic-syntax.html  book.toml  cargo.html  code-style.css  concurrency.html  control-flow.html  course-1.html  course-2.html  course-3.html  course-4.html  course-5.html  course-6.html  course-7.html  enums.html  error-handling.html  generics.html  hello-world.html  index.html  memory-management.html  methods.html  modules.html  netlify.toml  ownership.html  pattern-matching.html  print.html  remove-details.lua  searchindex.js  searchindex.json  speaker-notes.css  std.html  structs.html  testing.html  traits.html  unsafe.html  welcome.html  why-rust.html
basic-syntax/: functions.html  (+15 more)
src/exercises/: Cargo.toml
src/exercises/course-1/: afternoon.md  collatz.md  fibonacci.md  implicit-conversions.md  mat_mult.rs  matrix-mult.md  morning.md  palindrome.md  palindrome.rs
src/exercises/course-2/: afternoon.md  book-library.md  builder-type.md  iterators-and-ownership.md
src/exercises/course-3/: expression-eval.md  health-statistics.md  morning.md  points-polygons.md
src/exercises/course-4/: afternoon.md  iterator-chain.md  luhn.md  solutions-afternoon.md  strings-iterators.md
src/exercises/course-5/: log-filter.md  morning.md  simple-gui.md  solutions-morning.md
src/exercises/course-6/: afternoon.md  safe-ffi-wrapper.md  solutions-afternoon.md
src/exercises/course-7/: afternoon.md  dining-philosophers.md  dining-philosophers.rs  link-checker.md  morning.md
src/exercises/course-8/: Cargo.toml  exercises.md  led-pattern.md
(+277 files in other folders)
